language/move-lang/tests/move_check/parser/byte_string_invalid_hex.move
module 0x8675309::M {
    public fun bad_value(): vector<u8> {
        b"diem \xG0"
    }
}
